--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "server": "json-server -p5001 --watch db.json",
+    "server": "json-server --watch db.json --port 5001",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "nodemon": "^3.1.4",
     "tailwindcss": "^3.3.2"
   },
   "private": true
